# GraphicsEngine

./: CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  LICENSE  LightSource.cpp  LightSource.h  Mesh.cpp  Mesh.h  MeshLayout.h  Model.cpp  Model.h  README.md  Renderer.cpp  Renderer.h  RenderingItem.cpp  RenderingItem.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Shapes.cpp  Shapes.h  Types.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp  utils.cpp  utils.h
shaders/: Basic.frag  Basic.vert
